--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ name = "pybamm_diffsol"
 crate-type = ["cdylib"]
 
 [dependencies]
-diffsol = { version = "0.5.0", features = ["diffsl", "diffsl-llvm14"] }
+diffsol = { version = "0.5.0", features = ["diffsl"] }
 faer = "0.19.4"
 numpy = "0.23.0"
 pyo3 = "0.23.1"
