--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,6 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest",
-    "numpty",
-    "matplotlib",
+    "numpy",
+    "scipy",
 ]
