--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "pybamm_diffsol"
+version = "0.0.1"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
