dont build 3.13 on linux

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,16 +24,20 @@ jobs:
     strategy:
       matrix:
         platform:
+          # TODO: add 3.13, currently failing to build rust-numpy
           - runner: ubuntu-22.04
             target: x86_64
+            interpreter: '3.8 3.9 3.10 3.11 3.12 pypy3.9 pypy3.10'
           - runner: ubuntu-22.04
             target: x86
+            interpreter: '3.8 3.9 3.10 3.11 3.12 pypy3.9 pypy3.10'
           - runner: ubuntu-22.04
             target: aarch64
+            interpreter: '3.8 3.9 3.10 3.11 3.12 pypy3.9 pypy3.10'
           #- runner: ubuntu-22.04
           #  target: armv7
-          - runner: ubuntu-22.04
-            target: s390x
+          #- runner: ubuntu-22.04
+          #  target: s390x
           #- runner: ubuntu-22.04
           #  target: ppc64le
     steps:
@@ -45,7 +49,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --interpreter ${{ matrix.platform.interpreter }}
           sccache: 'true'
           manylinux: auto
       - name: Upload wheels
@@ -86,10 +90,13 @@ jobs:
         platform:
           - runner: ubuntu-22.04
             target: x86_64
+            interpreter: '3.8 3.9 3.10 3.11 3.12 pypy3.9 pypy3.10'
           - runner: ubuntu-22.04
             target: x86
+            interpreter: '3.8 3.9 3.10 3.11 3.12 pypy3.9 pypy3.10'
           - runner: ubuntu-22.04
             target: aarch64
+            interpreter: '3.8 3.9 3.10 3.11 3.12 pypy3.9 pypy3.10'
           #- runner: ubuntu-22.04
           #  target: armv7
     steps:
@@ -101,7 +108,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --interpreter ${{ matrix.platform.interpreter }}
           sccache: 'true'
           manylinux: musllinux_1_2
       - name: Upload wheels
@@ -147,8 +154,8 @@ jobs:
         platform:
           - runner: windows-latest
             target: x64
-          - runner: windows-latest
-            target: x86
+          #- runner: windows-latest
+          #  target: x86
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -184,8 +191,10 @@ jobs:
         platform:
           - runner: macos-13
             target: x86_64
+            python-version: 3.12
           - runner: macos-14
             target: aarch64
+            python-version: 3.12
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -205,7 +214,7 @@ jobs:
       - name: pytest
         run: |
           set -e
-          python3 -m venv .venv
+          python${{ matrix.platform.python-version }} -m venv .venv
           source .venv/bin/activate
           pip install pybamm_diffsol --find-links dist --force-reinstall
           pip install pytest
