--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -83,70 +83,6 @@ jobs:
             pip3 install pybamm_diffsol --find-links dist --force-reinstall
             pytest
 
-  musllinux:
-    runs-on: ${{ matrix.platform.runner }}
-    strategy:
-      matrix:
-        platform:
-          - runner: ubuntu-22.04
-            target: x86_64
-            interpreter: '3.8 3.9 3.10 3.11 3.12 pypy3.9 pypy3.10'
-          - runner: ubuntu-22.04
-            target: x86
-            interpreter: '3.8 3.9 3.10 3.11 3.12 pypy3.9 pypy3.10'
-          - runner: ubuntu-22.04
-            target: aarch64
-            interpreter: '3.8 3.9 3.10 3.11 3.12 pypy3.9 pypy3.10'
-          #- runner: ubuntu-22.04
-          #  target: armv7
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist --interpreter ${{ matrix.platform.interpreter }}
-          sccache: 'true'
-          manylinux: musllinux_1_2
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-musllinux-${{ matrix.platform.target }}
-          path: dist
-      - name: pytest
-        if: ${{ startsWith(matrix.platform.target, 'x86_64') }}
-        uses: addnab/docker-run-action@v3
-        with:
-          image: alpine:latest
-          options: -v ${{ github.workspace }}:/io -w /io
-          run: |
-            set -e
-            apk add py3-pip py3-virtualenv
-            python3 -m virtualenv .venv
-            source .venv/bin/activate
-            pip install pybamm_diffsol --no-index --find-links dist --force-reinstall
-            pip install pytest
-            pytest
-      - name: pytest
-        if: ${{ !startsWith(matrix.platform.target, 'x86') }}
-        uses: uraimo/run-on-arch-action@v2
-        with:
-          arch: ${{ matrix.platform.target }}
-          distro: alpine_latest
-          githubToken: ${{ github.token }}
-          install: |
-            apk add py3-virtualenv
-          run: |
-            set -e
-            python3 -m virtualenv .venv
-            source .venv/bin/activate
-            pip install pytest
-            pip install pybamm_diffsol --find-links dist --force-reinstall
-            pytest
-
   windows:
     runs-on: ${{ matrix.platform.runner }}
     strategy:
@@ -191,15 +127,13 @@ jobs:
         platform:
           - runner: macos-13
             target: x86_64
-            python-version: 3.12
           - runner: macos-14
             target: aarch64
-            python-version: 3.12
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: 3.12
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -214,7 +148,7 @@ jobs:
       - name: pytest
         run: |
           set -e
-          python${{ matrix.platform.python-version }} -m venv .venv
+          python3 -m venv .venv
           source .venv/bin/activate
           pip install pybamm_diffsol --find-links dist --force-reinstall
           pip install pytest
