--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -173,7 +173,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
-    needs: [linux, musllinux, windows, macos, sdist]
+    needs: [linux, windows, macos, sdist]
     environment: release
     permissions:
       # Use to sign the release artifacts
