no threading on mac tests

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -152,7 +152,7 @@ jobs:
           source .venv/bin/activate
           pip install pybamm_diffsol --find-links dist --force-reinstall
           pip install pytest
-          pytest
+          pytest -n 0
 
   sdist:
     runs-on: ubuntu-latest
